[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/stateMachine/PlayerStateMachine.gd" type="Script" id=1]
[ext_resource path="res://player/stateMachine/IS_FREE.gd" type="Script" id=2]
[ext_resource path="res://player/stateMachine/IN_BATTLE.gd" type="Script" id=3]

[node name="PlayerStateMachine" type="Node"]
script = ExtResource( 1 )

[node name="IS_FREE" type="Node" parent="."]
script = ExtResource( 2 )

[node name="IN_BATTLE" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="IN_BATTLE"]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="IN_BATTLE/Timer" to="IN_BATTLE" method="_on_Timer_timeout"]
